--- a/php/in.css
+++ b/php/in.css
@@ -8,7 +8,8 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #3e588f; /* ลองเปลี่ยนสีตรงนี้ดูครับ */
+  background: #3e588f;
+  /* ลองเปลี่ยนสีตรงนี้ดูครับ */
   padding: 10px 20px;
 }
 
@@ -38,7 +39,8 @@ nav a {
 }
 
 .btn {
-  background-color: rgb(255, 0, 0); /* ลองเปลี่ยนสีตรงนี้ดูครับ */
+  background-color: rgb(255, 0, 0);
+  /* ลองเปลี่ยนสีตรงนี้ดูครับ */
   color: white;
   padding: 10px 20px;
   border: none;
@@ -63,7 +65,8 @@ nav a {
   width: 32px;
   height: 32px;
   border: none;
-  background: #2a5d9f; /* สีปุ่ม +/- */
+  background: #2a5d9f;
+  /* สีปุ่ม +/- */
   color: #fff;
   border-radius: 50%;
   font-size: 1.1em;
@@ -170,7 +173,8 @@ nav a {
 }
 
 .calendar-date.selected {
-  background-color: rgb(17, 137, 206); /* สี วันที่*/
+  background-color: rgb(17, 137, 206);
+  /* สี วันที่*/
   color: white;
 }
 
@@ -187,4 +191,7 @@ nav a {
   cursor: pointer;
   font-size: 18px;
   color: red;
+
 }
+
+/*profile */
